--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
 install:
   - travis_retry pip install $DJANGO
   - pip install genshi
+  - pip install flake8
   - pip install -e .
 before_script:
   - flake8 django_genshi_template
